--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "eject": "react-scripts eject",
+    "lint:fix": "npm run lint -- --fix",
+    "lint:staged": "eslint --ext .ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -53,7 +56,12 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "typescript-eslint": "^8.20.0",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jest": "^28.10.0",
+    "eslint-plugin-unused-imports": "4.1.4",
+    "lint-staged": "^15.2.0"
   },
   "jest": {
     "moduleFileExtensions": [
